--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.2",
+    "@tanstack/react-query": "^4.35.0",
     "firebase": "^10.3.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.11.0",
     "react-id-swiper": "^4.0.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
