--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-id-swiper": "^4.0.0",
     "react-parallax": "^3.5.1",
